# VEDA_QTproject

./: .gitignore  CMakeLists.txt  Contact.cpp  Contact.h  README.md  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui  WeatherManager.cpp  WeatherManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  test_contacts.json
QT_project/: .gitignore  CMakeLists.txt
include/: SearchDialog.h  WeatherManager.h  mainwindow.h
src/: SearchDialog.cpp  WeatherManager.cpp  mainwindow.cpp
test_file/: test_contacts.json
ui/: mainwindow.ui
